# eyeonwater-yolo

./: .gitignore  Dockerfile  LICENSE  README.md  ai4-metadata.yml  jpl-sqa-local.py  metadata.json  pyproject.toml  requirements.txt  tox.ini
.sqa/: config.yml  docker-compose.yml  dockerfile
eyeonwater_yolo/: api.py  config.py  schema.py
eyeonwater_yolo/models/: best.pt
eyeonwater_yolov8/: api.py  config.py
tests/: test_api.py
