[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "eyeonwater-yolo"
authors = [
    { name = "Thomas Warbout", email = "thomas@maris.nl" },
]
description = "eye on water yolo  is an application using the DEEPaaS API."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: AI/ML/DL Researchers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "dependencies"]

[project.urls]
"Homepage" = "https://github.com/ai4os-hub/eyeonwater-yolo"
"Bug Tracker" = "https://github.com/ai4os-hub/eyeonwater-yolo/issues"

[tool.pytest.ini_options]
pythonpath = ["."]
env = [
    "EYEONWATER_YOLO_DATA_PATH=tests/data",
    "EYEONWATER_YOLO_MODELS_PATH=tests/models",
]
# Allow test files to share names
# https://docs.pytest.org/en/7.1.x/explanation/goodpractices.html
addopts = "--import-mode=importlib"

[tool.setuptools]
packages = [ "eyeonwater_yolo" ]

[tool.setuptools.package-dir]
"eyeonwater_yolo" = "eyeonwater_yolo"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { file = "VERSION" }

[project.entry-points."deepaas.v2.model"]
eyeonwater_yolo = "eyeonwater_yolo.api"